--- a/src/app/components/fields/date-range-field/date-range-field.component.css
+++ b/src/app/components/fields/date-range-field/date-range-field.component.css
@@ -44,6 +44,6 @@
 .drp-picker-wrap {
   position: absolute;
   top: calc(100% + 4px);
-  left: 0;
+  right: 0;
   z-index: 200;
 }
